<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--android:src="@tools:sample/avatars-->

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="129dp"
        android:layout_height="72dp"
        android:text="@string/app_name"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <Button
        android:id="@+id/btnEjercicio_1"
        android:layout_width="128dp"
        android:layout_height="70dp"
        android:layout_marginBottom="468dp"
        android:backgroundTint="@color/primary"
        android:text="@string/btnEjercicio_1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEjercicio_2"
        android:layout_width="137dp"
        android:layout_height="69dp"
        android:layout_marginBottom="468dp"
        android:backgroundTint="@color/primary"
        android:text="@string/btnEjercicio_2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEjercicio_3"
        android:layout_width="133dp"
        android:layout_height="67dp"
        android:layout_marginBottom="360dp"
        android:backgroundTint="@color/primary"
        android:text="@string/btnEjercicio_3"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEjercicio_4"
        android:layout_width="144dp"
        android:layout_height="68dp"
        android:layout_marginBottom="360dp"
        android:backgroundTint="@color/primary"
        android:text="@string/btnEjercicio_4"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/Autor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>